# dorsiav2

./: .env.example  .gitignore  CLAUDE.md  Makefile  SYSTEM.md  docker-compose.infra.yml  docker-compose.yml
ai-capability-skills-agent-persona/: CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
ai-capability-skills-agent-persona/defaults/agents/: claude-code.yaml  gemini.yaml
ai-capability-skills-agent-persona/defaults/capabilities/: citation-validation.yaml  code-analysis.yaml  web-research.yaml
ai-capability-skills-agent-persona/defaults/personas/: domain-expert.yaml  fact-checker.yaml  research-assistant.yaml  research-reviewer.yaml  technical-writer.yaml  web-researcher.yaml
ai-capability-skills-agent-persona/src/: __init__.py  config.py  main.py  persistence.py
ai-capability-skills-agent-persona/src/api/: __init__.py  agents.py  capabilities.py  personas.py  resolve.py  router.py  system.py
ai-capability-skills-agent-persona/src/loader/: __init__.py  yaml_loader.py
ai-capability-skills-agent-persona/src/models/: __init__.py  agent_profile.py  capability.py  persona.py  resolved.py
ai-capability-skills-agent-persona/src/registry/: __init__.py  extension_registry.py
ai-capability-skills-agent-persona/src/resolver/: __init__.py  persona_resolver.py
ai-capability-skills-agent-persona/src/sync/: __init__.py  gateway_sync.py
ai-capability-skills-agent-persona/src/watcher/: __init__.py  hot_reload.py
ai-capability-skills-agent-persona/tests/: test_api.py  test_loader.py  test_models.py  test_registry.py  test_resolver.py
research-work-flow-ai/: .env.example  API_REFERENCE.md  DELIVERY_INDEX.md  Dockerfile  GATEWAY_CLIENT_GUIDE.md  INTEGRATION_EXAMPLES.md  MODULES_SUMMARY.txt  Makefile  Research-Workflow-API.postman_collection.json  architecture.md  docker-compose.yml  pyproject.toml
research-work-flow-ai/app/: __init__.py  config.py  main.py
research-work-flow-ai/app/agents/: __init__.py  base.py  gateway_client.py  report_generator.py  researcher.py  resolver.py  reviewer.py  user_chat.py  workspace.py
research-work-flow-ai/app/api/: __init__.py  router.py  websocket.py  workflows.py
research-work-flow-ai/app/core/: __init__.py  orchestrator.py  state_machine.py
research-work-flow-ai/app/models/: __init__.py  database.py
research-work-flow-ai/docs/: RESEARCH_OUTCOMES.md
research-work-flow-ai/scripts/: validate_research_outcome.py
research-work-flow-ai/tests/: test_gateway_and_events.py
(+143 files in other folders)
