[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-workflow-service"
version = "0.1.0"
description = "Multi-agent research workflow orchestrator — coordinates Gemini and Claude Code agents through iterative research, review, and consensus cycles"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aarush" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "structlog>=24.2.0",
    "python-ulid>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
research-service = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
